<resources>
    <string name="app_name">Hold That Thought</string>
    <string name="indoorLocationButton">Indoor Location</string>
    <string name="new_note">New Note</string>
    <string name="CreateNoteTitle">Title</string>
    <string name="PalaceId">Palace ID</string>
    <string name="NoteCreationButton">Create Note</string>
    <string name="NotesCreationDescription">Description</string>
    <string name="new_palace">New Palace</string>
    <string name="CreatePalaceTitle">Title</string>
    <string name="UserId">User ID</string>
    <string name="PalaceCreationDescription">Description</string>
    <string name="PalaceCreationButton">Create Palace</string>
    <string name="UserCreationButton">Create User</string>
    <string name="new_user">New User</string>
    <string name="UserCreationPassword">Password</string>
    <string name="UserCreationUsername">Username</string>
    <string name="UserCreationName">Name</string>
    <string name="position">Location (x,y)</string>
    <string name="Remembered">✔</string>
    <string name="NotRemembered">✖</string>
    <string name="note_details">Move, wait, check!</string>
    <string name="ViewNoteButton">View Note</string>
    <string name="NotesViewDescription">Description</string>
    <string name="palace_details">Palace Details</string>
    <string name="viewPalaceTitle">Title</string>
    <string name="ViewPalaceButton">View Palace</string>
    <string name="signInButton">Sign In</string>
    <string name="signUpButton">Sign Up</string>
    <string name="username">Username</string>
    <string name="signInPassword">Password</string>
    <string name="welcome">Hello,</string>
    <string name="signOutButton">Sign Out</string>
    <string name="name">Name</string>
    <string name="createmenu">Create Mode</string>
    <string name="trainmenu">Train Mode</string>
    <string name="train">Go!</string>
    <string name="trackmenu">Track Mode</string>
    <string name="settingsmenu">Settings</string>
    <string name="deletePalaceButton">Delete Palace</string>
    <string name="deleteAccountButton">Delete Account</string>
    <string name="choosepalace">Palace:</string>
    <string name="unremembered_notes">Still to go:</string>
    <string name="palace_progress">Progress</string>
    <string name="CheckNotesButton">Check For Note Here!</string>
    <string name="LoadImageButton">Load Image</string>
    <string name="loadImageURL">Image URL</string>
    <string name="LoadImage">Load Image</string>
    <string name="imageLoaderButton">Image Loader</string>
    <string name="CheckImage">Check Image</string>
    <string name="NoteDetails">Note Details</string>
    <string name="login_fail">Login failed.</string>
    <string name="createLabel">Create</string>
    <string name="trainLabel">Train</string>
    <string name="trackLabel">Track</string>
    <string name="settingsLabel">Settings</string>
    <string name="launchBrowserButton">Choose Image</string>
    <string name="SelectImage">Select Image</string>
    <string name="imageUrl">Image URL</string>
    <string name="chooseImage">Select Image</string>
    <string name="goBack">←</string>
    <string name="goBackButton">←</string>
    <string name="goForwardButton">→</string>
    <string name="reloadButton">↻</string>
    <string name="viewChosenImage">View Chosen Image</string>
    <string name="imageSelected">selectedImage</string>
    <string name="imgSelected">No Image Selected!</string>
    <string name="note_details_lbl">Move, wait, check!</string>
    <string name="noteDescriptionLbl"></string>
    <string name="NotesViewTitle">Title</string>
    <string name="NotesViewTitleLbl" />
    <string name="deleteNote">Delete Note</string>
    <string name="palace_progress_counter">Remembered 0 of 0</string>
    <string name="create_palace_info1">1. Enter a title and description for palace.</string>
    <string name="create_palace_info2">2. Click \'Create Palace\'</string>
    <string name="create_menu_info">Create palaces and add notes to them.</string>
    <string name="train_menu_info">Retrieve notes of existing palaces. Practice makes perfect!</string>
    <string name="track_menu_info">Check progress and see which notes are still to be remembered.</string>
    <string name="settings_menu_info">Delete palaces or your account here.</string>
    <string name="create_note_info1">1. Enter a title and description for note.</string>
    <string name="create_note_info2">2. Choose palace note belongs to.</string>
    <string name="create_note_info3">3. Click \'Choose Image\' and select image.</string>
    <string name="create_note_info4">4. Click \'Create Note\' when happy!</string>
    <string name="signup_info1">1. Enter name and a suitable username and password. Password not encrypted so make sure it\'s not important!</string>
    <string name="signup_info2">2. Click \'Sign Up\'</string>
    <string name="select_image_info1">1. Search for suitable image on DuchDuckGo Images.</string>
    <string name="select_image_info2">2. Click on image result then \'View File\' in bottom right.</string>
    <string name="select_image_info3">3. Double tap resulting image, then click \'Select Image\'.</string>
    <string name="create_note_info_msg">Move around, choose a location then create your note!</string>
    <string name="view_note_info_msg">Move around, stop where you think a note is, then check!</string>
    <string name="view_note_info1">1. Click \'Check For Note Here!\'</string>
    <string name="view_note_info2">2. If a note is found, mark it as remembered (✔) or not (✖)!</string>
    <string name="view_note_info3">3. If no note is found, move to another location and try again!</string>
    <string name="view_palace_info_msg">View the % of notes remembered in the palace. If any are listed as \'Still to go\' then clicking on these will show more detail.</string>
</resources>
