<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="181dp"
        android:layout_height="209dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/logo"
        android:layout_marginBottom="2dp">
    </ImageView>

    <Button
        android:id="@+id/goToIndoorLocation"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="goToIndoorLocation"
        android:text="@string/indoorLocationButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/goToCreatePalace"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="goToCreatePalace"
        android:text="@string/PalaceCreationButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/goToCreateNote"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="goToCreateNote"
        android:text="@string/NoteCreationButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/goToCreateUser"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="goToCreateUser"
        android:text="@string/UserCreationButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/goToViewNote"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="goToViewNote"
        android:text="@string/ViewNoteButton"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/goToViewPalace"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="goToViewPalace"
        android:text="@string/ViewPalaceButton"
        android:textAllCaps="false" />

</LinearLayout>