<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/create_note_info1"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:inputType="textMultiLine"
        android:text="@string/create_note_info1"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/create_note_info2"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:inputType="textMultiLine"
        android:text="@string/create_note_info2"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/create_note_info3"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:inputType="textMultiLine"
        android:text="@string/create_note_info3"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/create_note_info4"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:inputType="textMultiLine"
        android:text="@string/create_note_info4"
        android:textColor="@color/white"
        android:textSize="25dp" />

</LinearLayout>