<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/createmenu"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <ImageView
        android:layout_width="181dp"
        android:layout_height="209dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/createwhite" />

    <Button
        android:id="@+id/new_palace"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="goToCreatePalace"
        android:text="@string/new_palace"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/new_note"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="goToCreateNote"
        android:text="@string/new_note"
        android:textAllCaps="false" />


</LinearLayout>