<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:id="@+id/create_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="117dp"
                android:layout_height="115dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:cropToPadding="false"
                android:onClick="goToHome"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_note"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/noteCreationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/CreateNoteTitle"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/palace_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/PalaceId"
                android:inputType="number" />

            <EditText
                android:id="@+id/noteDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/NotesCreationDescription"
                android:inputType="textCapWords" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorButtonPrimary"
                android:onClick="createNewNote"
                android:text="@string/NoteCreationButton"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>