<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:id="@+id/indoor_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:weightSum="1">


            <ImageView
                android:id="@+id/imageLoaded"
                android:layout_width="332dp"
                android:layout_height="305dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LoadImage"
                android:textSize="24sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/loadImageURL"
                android:ems="10"
                android:id="@+id/loadImageURL"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorButtonPrimary"
                android:onClick="loadImage"
                android:text="@string/LoadImageButton"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>